# Atlas

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  README_HF.md  fly.toml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
atlas/: __init__.py
atlas/backtest/: __init__.py  engine.py  metrics.py  strategy.py
atlas/features/: __init__.py  base.py  microstructure.py  orderbook.py  pipeline.py  trade.py  volatility.py
atlas/monitoring/: __init__.py  drift.py
atlas/signals/: __init__.py  alpha.py  validation.py
atlas/tests/: __init__.py  test_backtest.py  test_features.py  test_monitoring.py  test_signals.py
dashboard/: Dockerfile  README.md  app.py  requirements.txt
docs/: benchmark_results.txt
include/atlas/core/: order.hpp  order_book.hpp  price_level.hpp  types.hpp
include/atlas/feed/: feed_handler.hpp  itch_handler.hpp  itch_parser.hpp  market_data.hpp  ring_buffer.hpp
include/atlas/matching/: matching_engine.hpp
include/atlas/memory/: pool_allocator.hpp
src/bindings/: python_bindings.cpp
src/core/: order_book.cpp  price_level.cpp
src/feed/: feed_handler.cpp  feed_simulator.cpp
src/matching/: matching_engine.cpp
src/memory/: pool_allocator.cpp
tests/cpp/: test_itch_parser.cpp  test_matching_engine.cpp  test_memory_pool.cpp  test_order_book.cpp  test_ring_buffer.cpp
tests/cpp/benchmark/: bench_itch.cpp  bench_matching.cpp  bench_order_book.cpp
